--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,19 +7,30 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:paddingVertical="@dimen/static_spacing_large_extra">
+        android:paddingBottom="@dimen/static_spacing_large_extra">
 
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/containerCover"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_container_cover"
+            android:gravity="top" >
 
-        <ImageView
-            android:id="@+id/logoImage"
-            android:layout_width="fill_parent"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:contentDescription="@string/example_title"
-            android:cropToPadding="false"
-            android:src="@drawable/wolox_logo" />
+            <ImageView
+                android:id="@+id/coverImage"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/height_image_cover"
+                android:background="@drawable/login_cover"
+                android:scaleType="fitXY"
+                android:src="@drawable/gradient_shape" />
+
+            <ImageView
+                android:id="@+id/logoImage"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/height_image_logo"
+                android:contentDescription="@string/example_title"
+                android:layout_alignParentBottom="true"
+                android:src="@drawable/wolox_logo" />
+        </RelativeLayout>
 
         <EditText
             android:id="@+id/usernameInput"
@@ -34,16 +45,15 @@
             app:layout_constraintBottom_toTopOf="@id/favouriteColorInput"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/logoImage"
+            app:layout_constraintTop_toTopOf="@+id/containerCover"
             app:layout_constraintVertical_chainStyle="packed" />
 
         <EditText
             android:id="@+id/favouriteColorInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/spacing_large_extra"
+            android:layout_marginHorizontal="@dimen/spacing_large_extra"
             android:layout_marginTop="@dimen/spacing_large"
-            android:layout_marginRight="@dimen/spacing_large_extra"
             android:gravity="left"
             android:hint="@string/fragment_login_password"
             android:inputType="textPassword"
@@ -55,8 +65,9 @@
 
         <Button
             android:id="@+id/loginButton"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/spacing_large_extra"
             android:layout_marginTop="@dimen/spacing_large"
             android:text="@string/fragment_button_login"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -66,8 +77,9 @@
 
         <Button
             android:id="@+id/signupButton"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/spacing_large_extra"
             android:text="@string/fragment_button_signup"
             android:backgroundTint="@color/colorPrimary"
             android:textColor="@color/colorAccent"
