--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <!-- Base application colors -->
     <color name="colorPrimary">#1D9BD7</color>
     <color name="colorPrimaryDark">#0960B7</color>
+    <color name="colorSecondaryTransparent">#808DC63F</color>
+    <color name="colorPrimaryTransparent">#801D9BD7</color>
     <color name="colorAccent">#FFFFFF</color>
 </resources>
