--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -45,7 +45,7 @@
             app:layout_constraintBottom_toTopOf="@id/passwordInput"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/containerCover"
+            app:layout_constraintTop_toBottomOf="@id/containerCover"
             app:layout_constraintVertical_chainStyle="packed" />
 
         <EditText
