--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -8,11 +8,11 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/textSignUp"
+            android:id="@+id/text_profile"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="@string/text_signUp"
+            android:text="@string/text_profile"
             android:textSize="@dimen/font_big" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
