--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -16,7 +16,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-
         <TextView
             android:id="@+id/date"
             android:layout_width="wrap_content"
@@ -27,9 +26,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:maxLength="6"
-            android:ellipsize="end"
-            />
-
+            android:ellipsize="end" />
 
         <TextView
             android:id="@+id/title"
@@ -42,13 +39,13 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:textSize="18sp"
+            android:textSize="@dimen/font_large"
             android:maxLines="1"
             app:layout_constraintVertical_chainStyle="packed"/>
 
         <TextView
             android:id="@+id/description"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/spacing_none"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/static_spacing_largest"
             android:layout_marginRight="@dimen/static_spacing_largest"
